@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rss version="2.0">
+  <channel>
+    <title>Feed title</title>
+	<link>Feed link</link>
+    <description>Feed description</description>
+    <image>
+      <url>Image url</url>
+      <title>Image title</title>
+      <link>Image link</link>
+      <description>Image description</description>
+      <width>50</width>
+      <height>100</height>
+    </image>
+  </channel>
+</rss> 
